--- a/paginas/R34.html
+++ b/paginas/R34.html
@@ -13,7 +13,7 @@
     <header>
         
         <nav class="navbar navbar-expand-lg bg-color navbar-dark">
-            <a class="navbar-brand" href="#"> <img class="logo" src="../fotos/logo gtr.png" >
+            <a class="navbar-brand" href="#"> <img class="logo" src="../fotos/logo_gtr.png" >
 
            
                  La historia del skyline
