--- a/paginas/R35.html
+++ b/paginas/R35.html
@@ -75,7 +75,7 @@
 
         <section class="portada--r35">
             <h2>El Nissan Skyline R-35</h2>
-            <img src="/fotos/r35.jpg"  >
+            <img src="../fotos/r35.jpg"  >
             <article>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur deserunt, numquam optio dolore ipsam
                     iusto, perferendis eaque nisi blanditiis ratione fugiat a possimus atque vel! Maiores labore porro
