--- a/paginas/R32.html
+++ b/paginas/R32.html
@@ -89,7 +89,7 @@
                      </p>
                     </div>
                     <div class="col-lg-6 col-12  d-flex justify-content-end zoom">
-                        <img src="../fotos/gif_r-32.gif" alt="">
+                        <img src="/fotos/gifr-32.gif">
                     </div>
                 </div>
                
