--- a/paginas/R36.html
+++ b/paginas/R36.html
@@ -77,7 +77,7 @@
 
         <section class="portada--r36">
             <h2>El Nissan Skyline R-36</h2>
-            <img src="/fotos/r36.jpg"  >
+            <img src="../fotos/r36.jpg"  >
             <article>
                 <p>Este último modelo es un prototipo nada mas, se estima que su fecha de estreno sea alrededor del 2025.
                     Se estima que siga con el mismo motor que su antecesor.
