--- a/paginas/R32.html
+++ b/paginas/R32.html
@@ -84,7 +84,7 @@
           
             <div class="conteiner-fluid">
             <div class="row mx-0">
-                <div class="col-lg-6 col-12  border border-dark">
+                <div class="col-lg-6 col-12  ">
                 <p class="texto--r32" >En el año 1989 debutó el R32, con sus cuatro variantes, teniamos desde el clasico sedan 4 puertas hasta el coupé 2 puertas que todos conocemos y amamos. Venía con un motor RB 26, 6 cilindros en linea, el cual producía 276 caballos de fuerza, pero si lo  tocabas lo suficiente este podría llegar sin problemas a los 1000 caballos. Su tracción integral y muchas otras características lo hacía una bestia contra sus pares americanos y europeos de la época.
                      </p>
                     </div>
@@ -98,7 +98,7 @@
         </section>
        <div class="conteiner-fluid">
         <div class="row mx-0">
-         <div class="col-lg-6 col-12  border border-dark" >
+         <div class="col-lg-6 col-12  " >
           <p class="texto--r32" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos repellat quaerat aperiam iste doloremque accusantium provident aliquid, velit cupiditate. Quos voluptas quis consectetur enim deserunt alias fugiat delectus odit culpa.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum nihil doloremque nostrum ducimus libero dolorem non, odio odit qui veritatis cupiditate, eligendi sunt nemo exercitationem voluptate, aut suscipit! Reprehenderit, vel.
           </p>
