--- a/paginas/R33.html
+++ b/paginas/R33.html
@@ -72,13 +72,13 @@
 
     
 
-       <main>
+       <main class="portada--r33">
 
-        <section class="portada--r33">
+        <section>
             <h2>El Nissan Skyline R-33</h2>
             <div class="conteiner-fluid">
               <div class="row mx-0">
-                  <div class="col-lg-6 col-12  border border-dark">
+                  <div class="col-lg-6 col-12  ">
 
                 <p>El Skyline R33 fue presentado en agosto de 1996. Un poco más pesado que el R32, está disponible en estilos de carrocería cupé y berlina. El R33 fue el modelo más seguro con un 3,8 sobre 5,5; el sistema de airbag y las barras antivuelco internas hicieron el vehículo significativamente más seguro que los modelos anteriores. Con diferencia al anterior modelo este se enfocó a la mejora del manejo del mismo.</p>
                   </div>
