--- a/paginas/R34.html
+++ b/paginas/R34.html
@@ -73,14 +73,14 @@
 
     
 
-       <main>
+       <main class="portada--r34" >
 
-        <section class="portada--r34">
+        <section >
             <h2>El Nissan Skyline R-34</h2>
         
             <div class="conteiner-fluid">
               <div class="row mx-0">
-                  <div class="col-lg-6 col-12  border border-dark">
+                  <div class="col-lg-6 col-12">
 
                 <p>De todos los modelos mencionados en el sitio, este es el mas conocido. Quizás lo hallas visto en la saga de Rapido y Furioso en mas de una ocación manejado por Paul Walker </p>
                   </div>
