--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                   <li class="nav-item">
                     <a class="nav-link" href="./paginas/R36.html">R-36</a>
                   </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+                  </li>
  
              
                 
