--- a/paginas/R34.html
+++ b/paginas/R34.html
@@ -86,7 +86,9 @@
               <div class="row mx-0">
                   <div class="col-lg-6 col-12">
 
-                <p>De todos los modelos mencionados en el sitio, este es el mas conocido. Quizás lo hallas visto en la saga de Rapido y Furioso en mas de una ocación manejado por Paul Walker </p>
+                <p>Si le preguntas a algún entusiasta por el Nissan Skyline GT-R, lo más probable es que elija el R34. El Skyline de Nissan, concretamente, la versión GT-R ya contaba en 1990 con un merecido reconocimiento. Y la versión R34 ha sabido destacar, con el paso del tiempo, frente a las demás generaciones.
+
+                  El R34 supuso la combinación de dos elementos fundamentales: la turboalimentación, junto a la tracción a las cuatro ruedas. De esta forma, era capaz de detener el reloj, en la maniobra de aceleración de 0 a 100 km/h, en solo 4,7 segundos. Un registro impresionante, casi dos décadas después. Debajo del capó, encontramos una mecánica de 2,6 litros de cilindrada turboalimentada, que desarrollaba una potencia máxima de 276 CV. Al menos, de forma oficial, porque numerosas unidades de pruebas analizadas posteriormente, alcanzaban los 300 CV. La caja de cambios elegida era manual, con una relación de cambio corta. </p>
                   </div>
                 <div class="col-lg-6 col-12  d-flex justify-content-end zoom">
                 <img src="../fotos/gtr-r34.gif">
