--- a/index.html
+++ b/index.html
@@ -107,6 +107,11 @@
               <div class="col-lg-6 col-12  d-flex justify-content-end zoom">
                 <img class="primer-skyline" src="./fotos/skylinegif.gif">
               </div>
+              <div class="rox mx-0">
+                <div class="col-12 d-flex justify-content-end">
+                  <iframe width="400" height="300" src="https://www.youtube.com/embed/RJ4CtQhWjhA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+              </div>
         </section>
         
 
